objects/et4ae5__Configuration__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Aggregate_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregate Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Allow_Personal_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Personal Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Auth_API_URL__c</fullName>
        <label>Auth API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__AwaitingBusinessUnits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AwaitingBusinessUnits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Days_Tracked__c</fullName>
        <label>Days Tracked</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Deep_Link_Availability__c</fullName>
        <label>Deep Link Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Exclusion_Audience__c</fullName>
        <label>Exclusion Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                    <default>true</default>
                    <label>Hourly</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Individual_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Integration_Type__c</fullName>
        <label>Integration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Last_Log_Request__c</fullName>
        <label>Last Log Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Link_Detail_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link Detail Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__MultiFrom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate From Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__MultiReplyTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Reply-To Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Parent_Account_MID__c</fullName>
        <label>Parent Account MID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__Restrict_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Retry__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Root_Open_Rasta_API_URL__c</fullName>
        <label>Root Open Rasta API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Root_Rest_API_URL__c</fullName>
        <label>Root Rest API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Root_SOAP_API_URL__c</fullName>
        <label>Root SOAP API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Send_Types__c</fullName>
        <label>Send Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Sent_Events_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Events Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Support_Ticket_Recipient__c</fullName>
        <label>Support Ticket Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__automationObjects__c</fullName>
        <label>Enabled Automation Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__replyToOptions__c</fullName>
        <label>Reply-To Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__url_part__c</fullName>
        <label>URL Part</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__url_root__c</fullName>
        <defaultValue>&quot;mc&quot;</defaultValue>
        <label>URL Root</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>